Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4.11, 10.4.13, 10.5.3, 10.6
-
Can result in unexpected behaviour
-
Q2/2025 Development, Q3/2025 Maintenance
Description
Problem found during RQG testing invoking Mariabackup on
|
origin/10.3, 10.3 84db10f27bdb4c8d9edf7f554afdcd2a24e3285a 2020-04-15T09:56:03+03:00 build with debug
|
|
RQG runs
|
- a DDL mix in several sessions (here 10)
|
- from time to time
|
1. Make a backup
|
2. Create a DB Server based on that backup at some other location than the original one
|
3. Start that server and make certain consistency checks
|
4. Stop that cloned server and throw all his data away
|
|
One of the mariabackup ... --backup ... fails with
|
mariabackup: Stopping log copying thread.[00] 2020-04-15 18:25:53 DDL tracking : create 1054 "./test/FTS_000000000000042a_00000000000004de_INDEX_3.ibd": 210039
|
| 2020-04-15 18:25:53 0x7fa057b37700 InnoDB: Assertion failure in file extra/mariabackup/xtrabackup.cc line 661
|
InnoDB: Failing assertion: opt_no_lock
|
...
|
# 2020-04-15T18:25:57 [26096] | Thread pointer: 0x0
|
# 2020-04-15T18:25:57 [26096] | Attempting backtrace. You can use the following information to find out
|
# 2020-04-15T18:25:57 [26096] | where mysqld died. If you see no messages after this, something went
|
# 2020-04-15T18:25:57 [26096] | terribly wrong...
|
# 2020-04-15T18:25:57 [26096] | stack_bottom = 0x0 thread_stack 0x49000
|
# 2020-04-15T18:25:57 [26096] | /home/mleich/Server_bin/10.4_debug/bin/mariabackup(my_print_stacktrace+0x40)[0x5633adb21355]
|
# 2020-04-15T18:25:57 [26096] | ./home/mleich/Server_bin/10.4_debug/bin/mariabackup(handle_fatal_signal+0x3ae)[0x5633ad26fe63]
|
# 2020-04-15T18:25:57 [26096] | ..../lib/x86_64-linux-gnu/libpthread.so.0(+0x13150)[0x7fa05a776150]
|
# 2020-04-15T18:25:57 [26096] | /lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7fa0585820bb]
|
# 2020-04-15T18:25:57 [26096] | ./lib/x86_64-linux-gnu/libc.so.6(abort+0x16d)[0x7fa058583f5d]
|
# 2020-04-15T18:25:57 [26096] | bin/mariabackup(+0x11bcc95)[0x5633ad7a8c95]
|
# 2020-04-15T18:25:57 [26096] |bin/mariabackup(+0x7004e4)[0x5633accec4e4]
|
# 2020-04-15T18:25:57 [26096] | bin/mariabackup(+0x100a6c9)[0x5633ad5f66c9]
|
# 2020-04-15T18:25:57 [26096] | bin/mariabackup(+0x100d1e8)[0x5633ad5f91e8]
|
# 2020-04-15T18:25:57 [26096] | ut/ut0mem.cc:39(ut_str3cat(char const*, char const*, char const*))[0x5633ad5fddd4]
|
# 2020-04-15T18:25:57 [26096] | mariabackup/xtrabackup.cc:662(backup_file_op_fail(unsigned long, unsigned char const*, unsigned char const*, unsigned long, unsigned char const*, unsigned long))[0x5633ad5feeb1]
|
# 2020-04-15T18:25:57 [26096] | .log/log0recv.cc:623(fil_name_parse(unsigned char*, unsigned char const*, page_id_t, mlog_id_t, bool))[0x5633accefbe0]
|
# 2020-04-15T18:25:57 [26096] | log/log0recv.cc:2525(recv_parse_log_rec(mlog_id_t*, unsigned char*, unsigned char*, unsigned long*, unsigned long*, bool, unsigned char**))[0x5633acceff03]
|
# 2020-04-15T18:25:57 [26096] | mariabackup/xtrabackup.cc:2695(xtrabackup_copy_log(unsigned long, unsigned long, bool))[0x5633accf0107]
|
# 2020-04-15T18:25:57 [26096] | ./lib/x86_64-linux-gnu/libpthread.so.0(+0x77fc)[0x7fa05a76a7fc]
|
# 2020-04-15T18:25:57 [26096] | /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f)[0x7fa05865fb5f]
|
|
rqg.pl \
|
--duration=300 \
|
--queries=10000000 \
|
--threads=10 \
|
--no_mask \
|
--seed=random \
|
--rpl_mode=none \
|
--gendata=conf/mariadb/table_stress.zz \
|
--gendata_sql=conf/mariadb/table_stress.sql \
|
--engine=InnoDB \
|
--mysqld=--loose-idle_readonly_transaction_timeout=0 \
|
--mysqld=--net_read_timeout=30 \
|
--mysqld=--interactive_timeout=28800 \
|
--mysqld=--innodb-lock-wait-timeout=50 \
|
--mysqld=--connect_timeout=60 \
|
--mysqld=--slave_net_timeout=60 \
|
--mysqld=--innodb_stats_persistent=off \
|
--mysqld=--net_write_timeout=60 \
|
--mysqld=--loose-idle_transaction_timeout=0 \
|
--mysqld=--log-bin \
|
--mysqld=--lock-wait-timeout=86400 \
|
--mysqld=--wait_timeout=28800 \
|
--mysqld=--loose-debug_assert_on_not_freed_memory=0 \
|
--mysqld=--log-output=none \
|
--mysqld=--loose-idle_write_transaction_timeout=0 \
|
--mysqld=--loose_innodb_lock_schedule_algorithm=fcfs \
|
--mysqld=--loose-table_lock_wait_timeout=50 \
|
--mysqld=--log_bin_trust_function_creators=1 \
|
--reporters=Backtrace,Deadlock1,ErrorLog,Mariabackup \
|
--validators=None \
|
--grammar=MDEV-22250.yy \
|
--workdir=<local settings> \
|
--vardir=<local settings> \
|
--mtr-build-thread=<local settings> \
|
--basedir1=<local settings>
|
Warning: These call of RQG was valid in 2020. The parameters mtr-build-thread and workdir get currently computed based on the content of local.cfg.
|
|
You might need several attempts for replaying.
|
|
Also a replay of that problem on 10.5.3
|
origin/10.5 2f7d91bb6ce7bb34dd644e30590189bce37fb8f1 2020-04-14T18:43:03+03:00
|
|
No replay of that problem on 10.3.23
|
10.3 84db10f27bdb4c8d9edf7f554afdcd2a24e3285a 2020-04-15T09:56:03+03:00
|
|
Attachments
Issue Links
- causes
-
MDEV-36752 Assertion failure upon DROP TRIGGER or temporary table use between backup stages
-
- Confirmed
-
- relates to
-
MDEV-13825 mariabackup --lock-ddl-per-table does not properly lock FULLTEXT auxiliary tables
-
- Closed
-
-
MDEV-28399 Assertion failure in dict_table_check_for_dup_indexes upon concurrent DML/DDL
-
- Closed
-
-
MDEV-31904 mariabackup --backup: [ERROR] InnoDB: File ./test/FTS_...._INDEX_4.ibd: 'open' returned OS error 71
-
- Open
-
-
MDEV-33575 Assertion `rec_get_trx_id(rec, clust_index) < trx->id' failed in row_merge_read_clustered_index
-
- Confirmed
-
-
MDEV-35927 Mariadb-backup 10.11.9 crash
-
- Closed
-
-
MDEV-36493 Atomic CREATE OR REPLACE ... SELECT blocks InnoDB purge
-
- Confirmed
-
-
MDEV-36691 mariabackup crashes during last phases of SST
-
- Open
-