MDEV-22250 InnoDB: Failing assertion: opt_no_lock during mariabackup --backup

Ensure that backup_reset_alter_copy_lock() is called in case of rollback
or errr in mysql_inplace_alter_table() and copy_data_between_tables()